made a logout button and fixed some bugs

--- a/client/src/styles/chatscroll.css
+++ b/client/src/styles/chatscroll.css
@@ -11,5 +11,15 @@
 
 .backgroundfirst{
   background-image: url('../img/firstchatpage.png');
-  background-size:cover;
+  /* background-size:contain; */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+@media  screen and (max-width: 800px) {
+  .backgroundfirst{
+    height: 100%;
+    width: 100%;
+  }
 }
