--- a/client/src/styles/chatfeature.css
+++ b/client/src/styles/chatfeature.css
@@ -4,7 +4,8 @@
     color: white;
     border-left: 1px solid rgb(46,59,68);
     box-sizing: border-box;
-    height: 9%;
+    min-height: 9%;
+    height: min-content;
     background-color: rgb(31,44,51);
     font-size: larger;
     font-weight: bolder;
@@ -20,12 +21,15 @@
 }
 
 .leave_button{
-    height: 40px;
-    width: fit-content;
-    margin: auto auto;
+    height: fit-content;
+    /* width: fit-content; */
+    margin: auto;
 }
 
 @media only screen and (max-width: 800px){
+    .chatfeaturebar{
+        height: fit-content;
+    }
     .collapse-button{
         display: block;
         margin: auto;
