--- a/client/src/styles/leftsidebar.css
+++ b/client/src/styles/leftsidebar.css
@@ -5,6 +5,7 @@
     height: 100vh;
     max-height: 100vh;
     z-index: 1;
+    background-color: #111B21;
 }
 
 @media only screen and (max-width:800px) {
