--- a/client/src/styles/contacts.css
+++ b/client/src/styles/contacts.css
@@ -32,8 +32,10 @@
     margin: 0px 10px;
 }
 .contact-logo > img {
-    height: 50px;
-    border-radius: 50%;
+   height: 60px;
+   width: 60px;
+   object-fit: 'cover';
+   border-radius: 50%;
   }
 
 .contact-name{
