--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    /* gap: 3px; */
 }
 
 .avatar{
@@ -16,8 +17,39 @@
 #box > .input {
    width: 75%;
 }
+
 .error{
     color: red;
     font-weight: bolder;
     font-size: large;
+}
+
+.profile{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 0px 0px 10px 0px;
+    justify-content: space-around;
+    gap: 10px;
+}
+
+.profile_picture{
+    color: white;
+    background-color: grey;
+    height: 20px;
+    padding: 8px;
+    border-radius: 10px;
+    font-weight: bold;
+}
+
+.profile_picture:hover{
+    cursor: pointer;
+background-color:#3C425F;
+}
+
+.image_shower{
+    display: inline;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
 }
