--- a/client/src/styles/messagebox.css
+++ b/client/src/styles/messagebox.css
@@ -45,7 +45,7 @@
 
 .msg-username {
   font-size: larger;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: greenyellow;
 }
 
@@ -53,7 +53,10 @@
   margin: 7px 0px;
   font-size: medium;
   font-weight: lighter;
+  display: flex;
+  flex-direction: column;
 }
+
 .timestamp {
   float: right;
   color: rgb(127, 145, 154);
@@ -73,10 +76,27 @@
     transform: scale(1.1);
   }
 }
-.typing{
+.typing {
   color: rgb(0, 183, 255);
   animation: typingAnimation 1s infinite;
 }
 
+.msg-image {
+  height: 100%;
+  width: 100%;
+}
 
+.msg-image > img {
+  max-width:100%;
+  max-height:100%;
+  border-radius: 10px;
+}
 
+.right-msg {
+  margin-left: auto;
+}
+
+.msg-message{
+  font-size: larger;
+  font-weight: bolder;
+}
