--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,13 @@
-html,body{
+html,
+body {
   margin: 0px 0px;
-}
-
-.app{
   height: 100%;
   width: 100%;
 }
+
+.app {
+  height: 100%;
+  width: 100%;
+}
+
+
